# mafa

./: .gitignore  Cargo.toml  ChangeLog  README.md  README.org  README.txt
src/: camd.rs  camd.rs.bak  camdict.rs  comm.rs  error.rs  ev_ntf.rs  gtrans.rs  lib.rs  mafadata.rs  main.rs  private_macros.rs
src/camd/: camd_res.rs  mod.rs
src/script/: camdict-findvalidchild.js  camdict-locate.js  camdict-upath.js  compress.bash  gtrans-transres.js  gtrans-upath.js  twtl_v1-scrolld.js  twtl_v1-tweets.js  twtl_v1-ulpath.js
src/twtl/: mod.rs  twov.rs
tests/: gtrans_err.rs  gtrans_res.rs  twtl_err.rs  twtl_res.rs
