[package]
name = "mafa"
version = "0.1.0-beta2"
edition = "2021"
authors = ["Michael Lee <imichael2e2@proton.me/...@gmail.com>"]
description = """Mafa is a command-line tool that helps people interact
with online websites in a terminal(tty)."""
repository = "http://github.com/imichael2e2/mafa"
documentation = "http://github.com/imichael2e2/mafa"
homepage = "http://github.com/imichael2e2/mafa"
license = "GPL-3.0-or-later"
keywords = ["webdriver", "twitter", "google-translate", "not-a-crawler"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# default = ["imode", "gtrans", "twtl"]
imode = ["dep:rustyline"]
twtl = ["dep:quick-xml"]
gtrans = []
dev = ["wda/dev"]

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
wda = { version = "0.1.0-beta8",  features = ["firefox"] }
bwrap = { version = "0.1.0-beta3", features = ["use_std"] }
regex = "1.8.2"
clap = { version = "4.3.0", features = ["cargo"] }
unicode-width = "0.1.10"
libc = "0.2.146"
once_cell = "1.18.0"
rustyline = { version = "12.0.0", features = [], optional = true }
quick-xml = { version = "0.29.0", features = ["serialize"], optional = true }
