[package]
name = "mafa"
version = "0.2.2"
edition = "2021"
rust-version = "1.66.0"
authors = ["Michael Lee <imichael2e2@proton.me/...@gmail.com>"]
description = """Mafa is a command-line tool that helps people interact with
online websites in a terminal(tty)."""
repository = "http://github.com/imichael2e2/mafa"
documentation = "http://github.com/imichael2e2/mafa"
homepage = "http://github.com/imichael2e2/mafa"
license = "GPL-3.0-or-later"
keywords = ["twitter", "google-translate", "cambridge-dictionary"]
categories = ["command-line-utilities", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["imode", "gtrans", "camd", "twtl"]
imode = ["dep:rustyline"]
twtl = ["dep:quick-xml"]
gtrans = []
camd = []
dev = ["wda/dev"]
tst_twtl_logined = []

[dependencies]
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
wda = { version = "0.1.0-beta8",  features = ["firefox"] }
bwrap = { version = "1.0.0", features = ["use_std"] }
regex = "1.0.0"
clap = { version = "4.0.0", features = ["cargo"] }
unicode-width = "0.1.0"
libc = "0.2.0"
once_cell = "1.0.0"
rustyline = { version = "12.0.0", features = [], optional = true }
quick-xml = { version = "0.29.0", features = ["serialize"], optional = true }

[profile.release]
strip = "symbols"
